srcs/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana 
  labels:
    app: grafana
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
