srcs/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql 
  labels:
    app: mysql
    label: mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
