srcs/ft_server_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ft-server
  labels:
    run: ft_server
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: ft_server
spec:
  type: LoadBalancer
  ports:
  - port: 443
    protocol: TCP
  selector:
    app: ft_server
