srcs/ftps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps 
  labels:
    app: ftps
spec:
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 21
        livenessProbe:
          tcpSocket:
            port: 21
          initialDelaySeconds: 60
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ftps
spec:
  type: NodePort
  ports:
  - port: 21
    nodePort: 30021
    protocol: TCP
    name: 21-ftps
  selector:
    app: ftps
