srcs/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    name: http
  selector:
    app: grafana
