srcs/influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb 
  labels:
    app: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /var/lib/influxdb
        livenessProbe:
          httpGet:
            path: /ping?verbose=true
            port: 8086
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: influxdb
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
spec:
  type: ClusterIP
  ports:
  - port: 8086
    protocol: TCP
    name: influx
  selector:
    app: influxdb
