srcs/mysql-link.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-link
spec:
  selector:
    label: mysql
  ports:
  - port: 3306
    protocol: TCP
    name: sql
