srcs/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: NodePort
  ports:
  - port: 3306
    protocol: TCP
    name: http
  selector:
    app: mysql
