srcs/phpmyadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-svc
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    name: http
  selector:
    app: phpmyadmin
