srcs/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin 
  labels:
    app: phpmyadmin
    bdd: mysql
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
            scheme: HTTPS
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    name: http
  selector:
    app: phpmyadmin
