srcs/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  type: ClusterIP
  ports:
  - port: 5050
    protocol: TCP
    name: http
  selector:
    app: wordpress
