srcs/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress 
  labels:
    app: wordpress
    bdd: mysql
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 5050
        livenessProbe:
          httpGet:
            path: /
            port: 5050
            scheme: HTTPS
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: ClusterIP
  ports:
  - port: 5050
    protocol: TCP
    name: http
  selector:
    app: wordpress
